fix small screen usability
the email addresses on the contact page no longer continue off the screen when the screen is small

the images on the home/index page also no longer continue off the page and also adapt to the size of the screen

the images and text on the about page now shift too be be on top of each other on small screens instead of being squished together

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   border-radius: 10px; 
   max-width: 1200px; 
   margin: 20px auto; 
+  overflow-wrap: break-word;
 }
 
 .Nav_Bar { 
@@ -45,6 +46,10 @@ body {
   border-color: #f2f2f2;
   border-radius: 10px;
 }
+.beauty_tips_gallery { 
+  display: block;
+  justify-content: center; 
+}
 
 .beauty_tips {
   border-radius: 15px;
@@ -52,17 +57,16 @@ body {
   width: 250px;
 }
 
-.beauty_tips_gallery { 
-  display: flex;
-  justify-content: center; 
-}
-
+/*where is this used?*/
 #bookings {
   font-size: 30px;
   color: black;
 }
 
 .profile {
+  @media only screen and (max-width: 600px) {
+    display: block;
+  }
   display: flex;
   align-items: center;
   background-color: #f5b2c2; 
@@ -72,6 +76,7 @@ body {
   margin: 20px auto; 
 }
 
+/*where is this used?*/
 .profile img {
   border-radius: 15px;
   margin-right: 20px;
@@ -86,15 +91,15 @@ body {
   flex: 1;
 }
 
+.photo_album_info {
+  display: block;
+  justify-content: center;
+}
+
 .photo_album {
   border-radius: 15px;
   margin: 10px;
   width: 200px; 
-}
-
-.photo_album_info {
-  display: flex;
-  justify-content: center;
 }
 
 .map-container {
